# mdconfcli

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml  windows-ci.yml
src/: auth.rs  main.rs
